syntax = 'proto3';
option go_package = "/Student";

//学生数据体
message Student {
  string name = 1; //姓名
  string classes = 2; //班级
  int32 grade = 3; //分数
}

//请求数据体定义
message StudentRequest {
  string name = 1;
}

//学生服务
service StudentService {
  //查询学生信息服务
  rpc GetStudent (StudentRequest) returns (Student);
}

// protoc --proto_path=. --go_out=. --micro_out=. *.proto